plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	def envFile = file('.env')
	if (envFile.exists()) {
		def envMap = [:]
		envFile.readLines().each { line ->
			if (line && !line.startsWith('#')) {
				def parts = line.split('=', 2)
				if (parts.length == 2) envMap[parts[0].trim()] = parts[1].trim()
			}
		}
		environment envMap

		def mysqlUrl = envMap['MYSQL_PUBLIC_URL']
		if (mysqlUrl) {
			def m = (mysqlUrl =~ /mysql:\/\/([^:]+):([^@]+)@([^:]+):(\d+)\/(.+)/)
			if (m.matches()) {
				environment 'DB_URL', "jdbc:mysql://${m[0][3]}:${m[0][4]}/${m[0][5]}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true"
				environment 'DB_USERNAME', m[0][1]
				environment 'DB_PASSWORD', m[0][2]
			}
		}
	}
}
